--- a/app/sass/_settings.scss
+++ b/app/sass/_settings.scss
@@ -1,5 +1,5 @@
 $settings-panel-width : 560px;
-$settings-panel-content-height : 450px; 
+$settings-panel-content-height : 560px; 
 
 .settings-panel {
   &.hidden {
@@ -27,7 +27,7 @@ $settings-panel-content-height : 450px;
     right      : 0;
     margin     : auto;
     width      : $settings-panel-width;
-    border     : 1px solid #888;
+    border     : 1px solid #666;
     box-sizing : border-box;
     box-shadow : 0px 2px 1px #666;
 
@@ -154,6 +154,46 @@ $settings-panel-content-height : 450px;
     }
   }
 
+  .zsig-settings {
+
+    .zsig-line {
+      /* This table stuff is necessary to vertically center the zsig. */
+      display       : table;
+      width         : 100%;
+      border-bottom : 1px solid #BBB;
+      padding-left  : 2px;
+      padding-right : 2px;
+
+      &:first-child {
+        border-top : 1px solid #BBB;
+      }
+
+      .zsig, .remove-zsig {
+        display        : table-cell;
+        vertical-align : middle;
+      }
+
+      .zsig {
+        overflow      : hidden;
+        text-overflow : ellipsis;
+        width         : 287px;
+        min-width     : 287px;
+        max-width     : 287px;
+      }
+      .remove-zsig {
+        font-size    : 28px;
+        text-align   : center;
+        cursor       : pointer;
+        float        : right;
+        margin-right : 20px;
+
+        &:hover {
+          color : lighten(red, 10%);
+        }
+      }
+    }
+  }
+
   // SHARED STYLES FOR THE WHOLE FAMILY
   .settings-form {
     padding    : 5px;
@@ -190,47 +230,5 @@ $settings-panel-content-height : 450px;
       width      : 100%;
       margin-top : 10px;
     }
-  }
-
-  .zsig-line {
-    /* This table stuff is necessary to vertically center the zsig. */
-    display : table;
-    width   : 100%;
-    div.zsig, div.remove-zsig {
-      display        : table-cell;
-      vertical-align : middle;
-    }
-
-    div.zsig {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      width: 287px;
-      min-width: 287px;
-      max-width: 287px;
-    }
-  }
-
-  .remove-button {
-      font-size  : 28px;
-      text-align : center;
-      cursor     : pointer;
-      min-width  : 97px;
-      max-width  : 97px;
-
-      &:hover {
-          color: lighten(red, 10%);
-      }
-  }
-
-  .item-list {
-    padding-left  : 5px;
-    padding-right : 5px;
-  }
-
-  .zsig-line {
-    text-overflow : ellipsis;
-    border-bottom : 1px solid #BBB;
-    padding-left  : 2px;
-    padding-right : 2px;
   }
 }
