More settings and first run experience

--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -158,6 +158,12 @@
         word-wrap: break-word;
         font-weight: 700;
 
+        &.no-gravatar {
+          .gravatar, br {
+            display: none;
+          }
+        }
+
         .gravatar {
           border: 1px solid #BBB;
           width: $gravatar-size;
