--- a/app/templates/GeneralSettingsView.hbs
+++ b/app/templates/GeneralSettingsView.hbs
@@ -1,1 +1,3 @@
-Coming soon!
+<input type="checkbox" class="gravatar"{{#if showGravatar}}checked{{/if}}><label>Show Gravatars</label>
+<br>
+<input type="checkbox" class="first-run"{{#unless hasSeenRoost}}checked{{/unless}}><label>Show First Run</label>
