--- a/app/templates/HelpView.hbs
+++ b/app/templates/HelpView.hbs
@@ -1,1 +1,24 @@
-Coming soon!
+<h4>Welcome to <i>Roost</i></h4>
+<p>
+  Roost is a web client for reading Zephyr messages, sending Zephyr messages, and managing Zephyr subscriptions.  Roost also offers numerous features beyond traditional Zephyr clients, while maintaining many of the original characteristics of Barnowl.
+</p>
+<h4>New to Zephyr</h4>
+<p>
+  If you are new to Zephyr, we recommend you read <a href="https://sipb.mit.edu/doc/zephyr/" target="_blank">this introduction</a>.
+</p>
+<h4>Message Panes</h4>
+<p>
+  The most notable new feature presented in Roost is the concept of message <i>panes</i>.  Instead of having one stream of messages to narrow into/out of, Roost provides an interface for having multiple streams of messages with their own class/instance/recipient filters.  Each message pane has its own compose area and retains selected message state.  The state of your panes will persist across sessions and devices.
+</p>
+<h4>Hotkeys</h4>
+<p>
+  Roost implements hotkeys similar to Barnowl, while adding additional shortcuts for the newer features presented.  You can view the full hotkey list in the Hotkeys section of this window.
+</p>
+<h4>Stark Marks</h4>
+<p>
+  When two messages in a pane were sent with a sufficient time gap, Roost generates a break point known as a <i>stark mark</i>.  This mark can help readers process conversations as separate entities or notice when a new participant to a conversation has "starked".
+</p>
+<h4>Mobile/Tablet Support</h4>
+<p>
+  When accessed on a mobile device, Roost properly scales down to a convenient mobile size.  When accessed on a tablet, Roost will operate in the same way as in a web browser.
+</p>
