--- a/app/sass/_settings.scss
+++ b/app/sass/_settings.scss
@@ -50,12 +50,13 @@ $settings-panel-content-height : 560px;
         margin-left : 20px;
 
         .settings-tab {
-          display     : inline-block;
-          margin-left : 10px;
-          cursor      : pointer;
+          display       : inline-block;
+          cursor        : pointer;
+          padding-left  : 5px;
+          padding-right : 5px;
 
           &.selected {
-            border-bottom : 6px solid $primary-btn-bg;
+            border-bottom : 6px solid lighten($primary-btn-bg, 5%);
             line-height   : 27px;
           }
         }
@@ -85,18 +86,6 @@ $settings-panel-content-height : 560px;
         &.selected {
           display: block;
         }
-      }
-    }
-  }
-
-  // HOTKEY PAGE STYLING
-  .hotkey-settings {
-    .content {
-      width      : 100%;
-      text-align : center;
-
-      th, td {
-        border: 1px solid #BBB;
       }
     }
   }
@@ -154,8 +143,8 @@ $settings-panel-content-height : 560px;
     }
   }
 
+  // ZSIG PAGE STYLING
   .zsig-settings {
-
     .zsig-line {
       /* This table stuff is necessary to vertically center the zsig. */
       display       : table;
@@ -191,6 +180,37 @@ $settings-panel-content-height : 560px;
           color : lighten(red, 10%);
         }
       }
+    }
+  }
+
+  // GENERAL PAGE STYLING
+  .general-settings {
+    label {
+      margin-left : 5px;
+    }
+  }
+
+  // HOTKEY PAGE STYLING
+  .hotkey-settings {
+    .content {
+      width      : 100%;
+      text-align : center;
+
+      th, td {
+        border: 1px solid #BBB;
+      }
+    }
+  }
+
+  // HELP PAGE STYLING
+  .help {
+    h4 {
+      -webkit-margin-before : 10px;
+      -webkit-margin-after  : 0px;
+    }
+
+    p {
+      -webkit-margin-before : 0px;
     }
   }
 
