--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -8,7 +8,7 @@
   <div class="composer">
     <input class="class-input" type="text" placeholder="Class" value="{{composeFields.class}}"></input>
     <input class="instance-input" type="text" placeholder="Instance" value="{{composeFields.instance}}"></input>
-    <input class="recipient-input" type="text" placeholder="Recipient" value="{{composeFields.recipient}}"></input>
+    <input class="recipient-input" type="text" placeholder="Recipient" value="{{shortZusers composeFields.recipient}}"></input>
     <textarea class="content-input" rows="{{#if onMobile}}2{{else}}6{{/if}}" placeholder="Type your message here">{{composeFields.content}}</textarea>
     <div class="bottom-row">
       <span class="error">Warning: not subscribed to specified class.</span>
