--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -26,7 +26,7 @@
       {{/unless}}
     </div>
     <div class="message-block">
-      <div class="message">{{ztext message}}</div>
+      <div class="message">{{ztext message conversation}}</div>
       <div class="bottom-row">
         <div class="signature">
           {{ztext signature}}
